# skillforge

./: .gitignore  .pre-commit-hooks.yaml  CITATION.cff  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  SECURITY.md  VISION.md  action.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: example-skill-lint.yml  leaderboard.yml  lint-skills.yml.example  publish-wheels.yml  self-check.yml
artifacts/: README.md
artifacts/benchmark-workbook/: benchmark-workbook.aif  generate.py  skillforge_benchmarks.xlsx
artifacts/skill-diagram/: skill-diagram.aif
assets/blog/: 2026-04-04-awesome-list-submissions.md  2026-04-04-hackernews-post.md  2026-04-04-skillforge-launch.md
benchmarks/: README.md  RESULTS.md  chunking_quality_benchmark.py  chunking_results.json  index.html  results.html  results.json  roundtrip_benchmark.py  skill_benchmark_report.html  skill_execution_benchmark.py  skill_execution_results.json  skill_results.json  skill_token_benchmark.py  token_benchmark.py
benchmarks/adversarial/: README.md  analysis.py  benchmark.py  results.json  scenarios.py
benchmarks/chunking/: benchmark.ipynb  benchmark.py  chunking_results.json  results.json
crates/aif-binary/: Cargo.toml
crates/aif-binary/src/: dictionary.rs  lib.rs  token_opt.rs  wire.rs
crates/aif-binary/tests/: token_opt.rs  token_opt_roundtrip.rs  wire_roundtrip.rs  wire_skill.rs
crates/aif-cli/: Cargo.toml
crates/aif-cli/src/: args.rs  main.rs  util.rs
crates/aif-cli/src/commands/: chunk.rs  compile.rs  config.rs  conflict.rs  lint.rs  migrate.rs  migrate_syntax.rs  mod.rs  observe.rs  scan.rs  skill.rs
crates/aif-cli/tests/: eval_cli.rs  integration.rs  migrate_cli.rs  roundtrip_tests.rs  skill_cli.rs
crates/aif-cli/tests/fixtures/: test_import.html
crates/aif-conflict/: Cargo.toml
crates/aif-conflict/src/: analyze.rs  detect.rs  extract.rs  lib.rs  types.rs
crates/aif-core/: Cargo.toml
crates/aif-core/src/: ast.rs  chunk.rs  config.rs  error.rs  infer.rs  lib.rs  lint.rs  scan.rs  schema.rs  span.rs  text.rs  view.rs
crates/aif-core/tests/: schema.rs
crates/aif-eval/: Cargo.toml
crates/aif-eval/src/: anthropic.rs  baseline.rs  ci_runner.rs  compliance.rs  junit.rs  lib.rs  pipeline.rs  scenario.rs
crates/aif-eval/tests/: anthropic.rs  compliance.rs  e2e.rs  integration_ci.rs  pipeline.rs  scenario.rs
crates/aif-html/: Cargo.toml
crates/aif-html/src/: emitter.rs  importer.rs  lib.rs  readability.rs
crates/aif-html/tests/: import_aif_roundtrip.rs  import_html.rs  import_readability.rs  render_html.rs  render_html_extended.rs  skill_html.rs
crates/aif-html/tests/snapshots/: render_html__render_code_block.snap  render_html__render_list.snap  render_html__render_section_with_claim.snap  render_html__render_simple_document.snap
crates/aif-lml/: Cargo.toml
crates/aif-lml/src/: compress.rs  emitter.rs  hybrid.rs  lib.rs  parser.rs
crates/aif-lml/tests/: compress.rs  hybrid.rs  prose_modes.rs  render_lml.rs  render_lml_extended.rs  roundtrip.rs  skill_compact.rs  skill_lml.rs  table_support.rs
crates/aif-lml/tests/snapshots/: prose_modes__aggressive_markdown_like.snap  prose_modes__conservative_simple_skill.snap  prose_modes__moderate_drops_closing_tags_for_leaves.snap  render_lml__lml_simple_doc.snap
crates/aif-lsp/: Cargo.toml
crates/aif-lsp/src/: diagnostics.rs  main.rs  semantic_tokens.rs  symbols.rs
crates/aif-markdown/: Cargo.toml
crates/aif-markdown/src/: emitter.rs  importer.rs  lib.rs
crates/aif-markdown/tests/: import_extended.rs  import_md.rs  render_md.rs  render_md_extended.rs  skill_md.rs
crates/aif-markdown/tests/snapshots/: import_md__import_markdown_with_code.snap  import_md__import_markdown_with_list.snap  import_md__import_simple_markdown.snap  render_md__render_md_section_and_list.snap  render_md__render_md_simple.snap
crates/aif-migrate/: Cargo.toml
crates/aif-migrate/src/: apply.rs  chunk.rs  engine.rs  lib.rs  llm.rs  repair.rs  report.rs  types.rs  validate.rs  verify.rs
crates/aif-migrate/tests/: apply.rs  chunk.rs  engine.rs  examples.rs  integration.rs  repair.rs  report.rs  smoke.rs  validate.rs  verify.rs
crates/aif-migrate/tests/fixtures/: jest-to-vitest.aif
crates/aif-observe/: Cargo.toml
crates/aif-observe/src/: extract.rs  lib.rs  matcher.rs  report.rs  types.rs
crates/aif-parser/: Cargo.toml
crates/aif-parser/src/: attrs.rs  block.rs  inline.rs  lexer.rs  lib.rs  migrate.rs
crates/aif-parser/tests/: parse_basic.rs  parse_blocks.rs
crates/aif-parser/tests/snapshots/: parse_basic__parse_metadata_and_paragraph.snap  parse_basic__parse_section_with_content.snap
crates/aif-pdf/: Cargo.toml
crates/aif-pdf/src/: lib.rs
crates/aif-pdf/src/chunk/: ids.rs  mod.rs  splitter.rs
crates/aif-pdf/src/export/: mod.rs  renderer.rs  styles.rs
crates/aif-pdf/src/import/: extractor.rs  mod.rs
crates/aif-pdf/tests/: chunk_tests.rs  export_tests.rs
crates/aif-python/: Cargo.toml
crates/aif-python/src/: lib.rs
crates/aif-skill/: Cargo.toml
crates/aif-skill/src/: chain.rs  classify.rs  delta.rs  diff.rs  eval.rs  export.rs  hash.rs  import.rs  inherit.rs  lib.rs  lint.rs  manifest.rs  recommend.rs  registry.rs  remote.rs  resolver.rs  sign.rs  validate.rs  version.rs
crates/aif-skill/tests/: classify.rs  delta.rs  diff.rs  lint.rs  recommend.rs  registry.rs  roundtrip.rs  version.rs
data/: migration_skill_cloud_design.md
docs/: ai_native_document_format_proposal.md  architecture.md  proposal.md
editors/vscode/: README.md  (+2 more)
examples/: README.md  migration_eslint_flat_config.aif  migration_nextjs_13_to_15.aif  migration_report_nextjs.html  migration_typescript_strict.aif  simple.aif  wiki_article_output.md  wiki_source.md
leaderboard/: LEADERBOARD.md  data.json
plugins/: README.md
rfcs/: 0001-aif-v2-syntax.md
scripts/: build_leaderboard.py  demo.sh  generate_diagram.py  generate_sdks.py
sdks/python/: pyproject.toml
sdks/python/aif/: __init__.py  parser.py  types.py
sdks/python/tests/: test_roundtrip.py
tutorial/: skillforge_roundtrips.ipynb  skillforge_tutorial.ipynb
(+147 files in other folders)
