[workspace]
resolver = "2"
members = [
    "crates/aif-core",
    "crates/aif-parser",
    "crates/aif-html",
    "crates/aif-markdown",
    "crates/aif-lml",
    "crates/aif-cli",
    "crates/aif-skill",
    "crates/aif-binary",
    "crates/aif-pdf",
    "crates/aif-eval",
    "crates/aif-migrate",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
aif-core = { path = "crates/aif-core" }
aif-parser = { path = "crates/aif-parser" }
aif-html = { path = "crates/aif-html" }
aif-markdown = { path = "crates/aif-markdown" }
aif-lml = { path = "crates/aif-lml" }
aif-skill = { path = "crates/aif-skill" }
aif-binary = { path = "crates/aif-binary" }
aif-pdf = { path = "crates/aif-pdf" }
aif-eval = { path = "crates/aif-eval" }
aif-migrate = { path = "crates/aif-migrate" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
