[workspace]
resolver = "2"
members = [
    "crates/aif-core",
    "crates/aif-parser",
    "crates/aif-html",
    "crates/aif-markdown",
    "crates/aif-lml",
    "crates/aif-cli",
    "crates/aif-skill",
    "crates/aif-binary",
    "crates/aif-pdf",
    "crates/aif-eval",
    "crates/aif-migrate",
    "crates/aif-lsp",
    "crates/aif-python",
    "crates/aif-observe",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/LiqunChen0606/skillforge"
homepage = "https://github.com/LiqunChen0606/skillforge"
keywords = ["llm", "document", "semantic", "skill", "token-efficient"]
categories = ["text-processing"]

[workspace.dependencies]
aif-core = { path = "crates/aif-core", version = "0.1.0" }
aif-parser = { path = "crates/aif-parser", version = "0.1.0" }
aif-html = { path = "crates/aif-html", version = "0.1.0" }
aif-markdown = { path = "crates/aif-markdown", version = "0.1.0" }
aif-lml = { path = "crates/aif-lml", version = "0.1.0" }
aif-skill = { path = "crates/aif-skill", version = "0.1.0" }
aif-binary = { path = "crates/aif-binary", version = "0.1.0" }
aif-pdf = { path = "crates/aif-pdf", version = "0.1.0" }
aif-eval = { path = "crates/aif-eval", version = "0.1.0" }
aif-migrate = { path = "crates/aif-migrate", version = "0.1.0" }
aif-observe = { path = "crates/aif-observe", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
