[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "aif-skillforge"
version = "0.4.1"
description = "SkillForge — quality layer for Agent Skills. Lint, hash, sign, version, eval your SKILL.md files"
requires-python = ">=3.9"
license = "Apache-2.0 OR MIT"
keywords = ["agent-skills", "skillmd", "lint", "signing", "eval"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
manifest-path = "crates/aif-python/Cargo.toml"
features = ["pyo3/extension-module"]
