[package]
name = "aif-binary"
description = "Binary serialization for AIF documents — wire (postcard) and token-optimized formats"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["llm", "document", "binary", "serialization", "postcard"]
categories = ["encoding"]

[dependencies]
aif-core = { workspace = true }
postcard = { version = "1", features = ["alloc"] }
serde = { workspace = true }

[dev-dependencies]
aif-core = { workspace = true }
serde_json = { workspace = true }
