[package]
name = "aif-cli"
version.workspace = true
edition.workspace = true
description = "AIF SkillForge — semantic document compiler, skill toolkit, and format cleaner for LLMs"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/LiqunChen0606/aif"
keywords = ["llm", "document", "semantic", "skill", "token-efficient"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "aif"
path = "src/main.rs"

[dependencies]
aif-core = { workspace = true, features = ["llm"] }
aif-parser = { path = "../aif-parser" }
aif-html = { path = "../aif-html" }
aif-markdown = { path = "../aif-markdown" }
aif-lml = { path = "../aif-lml" }
aif-skill = { path = "../aif-skill" }
aif-binary = { path = "../aif-binary" }
aif-pdf = { path = "../aif-pdf" }
aif-eval = { path = "../aif-eval" }
aif-migrate = { path = "../aif-migrate" }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
aif-core = { workspace = true }
aif-parser = { path = "../aif-parser" }
aif-html = { path = "../aif-html" }
aif-markdown = { path = "../aif-markdown" }
aif-lml = { path = "../aif-lml" }
serde_json = { workspace = true }
