[package]
name = "aif-cli"
description = "SkillForge — quality layer for Agent Skills. Lint, hash, sign, version, eval your SKILL.md files"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["agent-skills", "skillmd", "lint", "signing", "eval"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "aif"
path = "src/main.rs"

[dependencies]
aif-core = { workspace = true, features = ["llm"] }
aif-parser = { workspace = true }
aif-html = { workspace = true }
aif-markdown = { workspace = true }
aif-lml = { workspace = true }
aif-skill = { workspace = true }
aif-binary = { workspace = true }
aif-pdf = { workspace = true }
aif-eval = { workspace = true }
aif-migrate = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
aif-core = { workspace = true }
aif-parser = { workspace = true }
aif-html = { workspace = true }
aif-markdown = { workspace = true }
aif-lml = { workspace = true }
serde_json = { workspace = true }
