[package]
name = "aif-core"
version.workspace = true
edition.workspace = true

[features]
default = []
llm = ["reqwest", "tokio"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "0.8"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
