[package]
name = "aif-core"
description = "Core AST types, spans, errors, and shared utilities for the AIF semantic document format"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["llm", "document", "semantic", "ast", "parser"]
categories = ["text-processing", "data-structures"]

[features]
default = []
llm = ["reqwest", "tokio"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "0.8"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
