[package]
name = "aif-eval"
version.workspace = true
edition.workspace = true

[dependencies]
aif-core = { workspace = true }
aif-skill = { path = "../aif-skill" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
aif-parser = { path = "../aif-parser" }
