[package]
name = "aif-html"
version.workspace = true
edition.workspace = true

[dependencies]
aif-core = { workspace = true }
ego-tree = "0.10"
scraper = "0.22"

[dev-dependencies]
aif-parser = { path = "../aif-parser" }
insta = { version = "1", features = ["yaml"] }
pretty_assertions = "1"
serde_json = { workspace = true }
