[package]
name = "aif-lml"
description = "LML compiler with 5 prose modes, bidirectional parser, hybrid encoding, and semantic compression"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["llm", "document", "lml", "semantic", "compression"]
categories = ["text-processing"]

[dependencies]
aif-core = { workspace = true }
base64 = "0.22"

[dev-dependencies]
aif-parser = { workspace = true }
insta = { version = "1", features = ["yaml"] }
pretty_assertions = "1"
