[package]
name = "aif-markdown"
description = "Markdown compiler and pulldown-cmark importer for AIF semantic documents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["llm", "document", "markdown", "semantic", "importer"]
categories = ["text-processing"]

[dependencies]
aif-core = { workspace = true }
pulldown-cmark = "0.12"

[dev-dependencies]
aif-core = { workspace = true }
aif-parser = { workspace = true }
insta = { version = "1", features = ["yaml"] }
pretty_assertions = "1"
