[package]
name = "aif-migrate"
version.workspace = true
edition.workspace = true

[dependencies]
aif-core = { workspace = true }
aif-skill = { path = "../aif-skill" }
aif-eval = { path = "../aif-eval" }
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
aif-parser = { path = "../aif-parser" }
aif-html = { path = "../aif-html" }
