[package]
name = "aif-pdf"
description = "PDF export (krilla) and import (pdf_oxide) with document chunking strategies"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["llm", "document", "pdf", "chunking", "semantic"]
categories = ["text-processing"]

[dependencies]
aif-core = { workspace = true }
pdf_oxide = "0.3"
krilla = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
aif-parser = { workspace = true }
pretty_assertions = "1"

[features]
default = ["import", "export"]
import = []
export = []
