# NOTE: This crate is a PyO3 extension-module (cdylib) and cannot be linked
# standalone. Build via `maturin develop` — do NOT include in `cargo build --workspace`.
[package]
name = "skillforge"
version = "0.8.0"
edition = "2021"
description = "SkillForge Python bindings — lint, hash, sign, compile your Agent Skills"
license = "Apache-2.0 OR MIT"
publish = false

[lib]
name = "skillforge"
crate-type = ["cdylib"]

[dependencies]
# abi3-py39 builds a stable-ABI wheel that works on Python 3.9+ (one wheel
# per platform instead of per Python version, forward-compatible with 3.14+).
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39", "generate-import-lib"] }
aif-core = { path = "../aif-core" }
aif-parser = { path = "../aif-parser" }
aif-html = { path = "../aif-html" }
aif-markdown = { path = "../aif-markdown" }
aif-lml = { path = "../aif-lml" }
aif-skill = { path = "../aif-skill" }
serde_json = "1"
