[package]
name = "aif-skill"
description = "Skill profiles — validation, hashing, versioning, diff, registry, chaining, and marketplace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["llm", "skill", "validation", "registry", "versioning"]
categories = ["text-processing"]

[dependencies]
aif-core = { workspace = true }
sha2 = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
aif-core = { workspace = true }
aif-parser = { workspace = true }
tempfile = "3"
