[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aif-sdk"
version = "0.1.0"
description = "Python SDK for the AI-native Interchange Format (AIF)"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
